@@ -1,7 +1,10 @@
 package com.thigas.quack.infrastructure.persistence.repository;
 
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
+import com.thigas.quack.adapter.mapper.UserMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
@@ -14,56 +17,29 @@ public class UserRepositoryImplementation implements IUserRepository {
 
     @Autowired
     private IUserModelRepository userModelRepository;
+    private final UserMapper userMapper = UserMapper.INSTANCE;
 
     @Override
-    public User save(User user) {
-        UserModel userModel = mapToUserModel(user);
-        return mapToUser(userModelRepository.save(userModel));
+    public User save(User address) {
+        UserModel userModel = userMapper.toUserModel(address);
+        UserModel savedUserModel = userModelRepository.save(userModel);
+        return userMapper.toUser(savedUserModel);
     }
 
     @Override
     public Optional<User> findById(Long id) {
-        return userModelRepository.findById(id).map(this::mapToUser);
+        return userModelRepository.findById(id).map(userMapper::toUser);
     }
 
     @Override
     public Iterable<User> findAll() {
-        return userModelRepository.findAll().stream().map(this::mapToUser).toList();
+        return userModelRepository.findAll().stream()
+                .map(userMapper::toUser)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(Long id) {
         userModelRepository.deleteById(id);
-    }
-
-    // Transforma os dados do banco em objeto
-    private User mapToUser(UserModel userModel) {
-        User user = new User();
-        user.setId(userModel.getId());
-        user.setName(userModel.getName());
-        user.setPhone(userModel.getPhone());
-        user.setEmail(userModel.getEmail());
-        user.setPassword(userModel.getPassword());
-        user.setCpf(userModel.getCpf());
-        user.setBornAt(userModel.getBornAt());
-        user.setPoints(userModel.getPoints());
-        user.setRegisterAt(userModel.getRegisterAt());
-        user.setImagePath(userModel.getImagePath());
-        return user;
-    }
-
-    private UserModel mapToUserModel(User user) {
-        UserModel userModel = new UserModel();
-        userModel.setId(user.getId());
-        userModel.setName(user.getName());
-        userModel.setPhone(user.getPhone());
-        userModel.setEmail(user.getEmail());
-        userModel.setPassword(user.getPassword());
-        userModel.setCpf(user.getCpf());
-        userModel.setBornAt(user.getBornAt());
-        userModel.setPoints(user.getPoints());
-        userModel.setRegisterAt(user.getRegisterAt());
-        userModel.setImagePath(user.getImagePath());
-        return userModel;
     }
 }
